fix(components/lookup): autocomplete position with nested overflow elements (#1813) (#1853)
* fix(components/lookup): autocomplete position with nested overflow elements

* Update visual tests

* Adjustments for visual tests

* Update dependencies. Set Chrome headless window size to eleminate scrolling during screenshot.

* Split package updates out, update comment

* Updates based on feedback

* Change overflow parents to check fixed position.

* Address visual regression issues.

* Address visual regression issues.

* Add font loading assertion for box e2e test

* Add layout viewport handling, add affix e2e test

* Address visual regression issues.

* Fix autocomplete placement, fix mobile issue with viewport

* Revert autocomplete position change.

* Fit with in visible area of overflow parent, simplify fit within body logic, switch autocomplete to fit within overflow parent

* Updates based on feedback

* Move layout viewport to service, fix e2e tests

* Stick to the base element when part of the base element is obscured.

--- a/apps/e2e/lookup-storybook/src/app/lookup/lookup.component.scss
+++ b/apps/e2e/lookup-storybook/src/app/lookup/lookup.component.scss
@@ -1,6 +1,6 @@
 :host {
   display: block;
-  min-height: 400px;
+  min-height: 900px;
   max-width: 1000px;
   width: 1000px;
 }
